# atlas-clean-code-juli-2023-teil2

./: README.md
SimpleNimSpielProject/: CMakeLists.txt
SimpleNimSpielProject/SimpleNimSpielProject/: CMakeLists.txt  SimpleNimSpielProject.cpp  SimpleNimSpielProject.h
SimpleNimSpielProject/SimpleNimSpielProject/client/: game_client.h
SimpleNimSpielProject/SimpleNimSpielProject/game/: abstract_game.h  game.h
SimpleNimSpielProject/SimpleNimSpielProject/game/nimgame/: nimgame_impl.h
SimpleNimSpielProject/SimpleNimSpielProject/game/nimgame/player/: abstract_nimgame_player.h  computer_player.h  human_player.h  oma_player.h
SimpleNimSpielProject/SimpleNimSpielProject/game/player/: abstract_player.h  player.h
SimpleNimSpielProject/SimpleNimSpielProject/io/: consolen_writer.h  writer.h
ThreadDemo/: CMakeLists.txt  main.cpp
TranslatorProjekt/: CMakeLists.txt  main.cpp
VectorFiller/: CMakeLists.txt  main.cpp
VectorFillerProjekt/: CMakeLists.txt  main.cpp
VectorFillerProjekt/source/: CMakeLists.txt
VectorFillerProjekt/source/bootstrap/: application_starter.h
VectorFillerProjekt/source/clients/: client_impl.h
VectorFillerProjekt/source/collections/: abstract_vector_factory.h  vector_factory.h
VectorFillerProjekt/source/collections/impl/decoraters/: abstract_vector_factory_decorator.h  vector_factory_benchmark_decorator.h  vector_factory_logger_decorator.h  vector_factory_security_decorator.h
VectorFillerProjekt/source/collections/impl/parallel/: vector_factory_parallel_auto_impl.h  vector_factory_parallel_impl.h
VectorFillerProjekt/source/collections/impl/sequential/: vector_factory_sequential_impl.h
VectorFillerProjekt/source/generators/: generator.h  generator_factory.h  number_generator.h  number_generator_factory.h
VectorFillerProjekt/source/generators/random/: mersenne_twister_number_generator.h  mersenne_twister_number_generator_factory.h
VectorFillerProjekt/source/io/: writer.h
VectorFillerProjekt/source/time/: stopwatch.h
VectorFillerProjekt/source/time/impl/: stopwatch_impl.h
untitled/: main.cpp
(+6 files in other folders)
